--- a/ci/cfn/webs.template
+++ b/ci/cfn/webs.template
@@ -212,8 +212,9 @@ Resources:
 
             function error_exit
             {
-            echo "Sleeping for 5 minutes of debugging time"
-            sleep 600
+            # If you need to debug crashing instances, try uncommenting this:
+            # echo "Sleeping for 5 minutes of debugging time"
+            # sleep 600
             /opt/aws/bin/cfn-signal --exit-code 1 --region ${AWS::Region} --stack ${AWS::StackName} --resource WebServerASG
             exit 1
             }
